# tsfm-lens

./: .gitignore  .gitmodules  README.md  hf_demo.md  package-lock.json  package.json  pyproject.toml
assets/: CircuitLensBolt_ablate_for_heads_at_1pp.json  CircuitLensBolt_alignment_low_to_high.txt  CircuitLensBolt_alignment_low_to_high_by_layer.json  CircuitLensBolt_srank_low_to_high.txt  CircuitLensBolt_srank_low_to_high_by_layer.json  CircuitLensChronos2_ablate_for_heads_at_1pp.json  CircuitLensChronos2_srank_low_to_high.txt  CircuitLensChronos2_srank_low_to_high_by_layer.json  CircuitLensChronos_alignment_low_to_high.txt  CircuitLensChronos_alignment_low_to_high_by_layer.json  CircuitLensChronos_srank_low_to_high.txt  CircuitLensChronos_srank_low_to_high_by_layer.json  CircuitLensMoirai_ablate_for_heads_at_0pp.json  CircuitLensMoirai_ablate_for_heads_at_1pp.json  CircuitLensMoirai_alignment_low_to_high.txt  CircuitLensMoirai_alignment_low_to_high_by_layer.json  CircuitLensMoirai_srank_low_to_high.txt  CircuitLensMoirai_srank_low_to_high_by_layer.json  CircuitLensTimesFM_ablate_for_heads_at_1pp.json  CircuitLensTimesFM_alignment_low_to_high.txt  CircuitLensTimesFM_alignment_low_to_high_by_layer.json  CircuitLensTimesFM_srank_low_to_high.txt  CircuitLensTimesFM_srank_low_to_high_by_layer.json  CircuitLensToto_ablate_for_heads_at_1pp.json  CircuitLensToto_alignment_low_to_high.txt  CircuitLensToto_alignment_low_to_high_by_layer.json  CircuitLensToto_srank_low_to_high.txt  CircuitLensToto_srank_low_to_high_by_layer.json
config/: ablation.yaml  attention_entropy.yaml  config.yaml  entropic_rank.yaml  evaluation.yaml  induction.yaml  models.yaml  plotting.yaml
hf_demo/: app.py  requirements.txt
notebooks/: README.md  ablation_mosaic.ipynb  algo_dev.ipynb  fourier_attn.ipynb  induction_heads_only.ipynb  induction_mosaics.ipynb  layer_decisions.ipynb  (+5 more)
(+113 files in other folders)
